manifests/camel/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: churn-camel
  namespace: ocp-datalake
  labels:
    app.kubernetes.io/name: churn-score-bridge
    app.kubernetes.io/part-of: ocp-datalake
spec:
  to:
    kind: Service
    name: churn-score-bridge
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
